--- a/views/detail-indikator.ejs
+++ b/views/detail-indikator.ejs
@@ -17,9 +17,11 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="breadcrumbs-content">
-                                    <h1 class="page-title">Job Details</h1>
-                                    <p>Business plan draws on a wide range of knowledge from different business<br>
-                                        disciplines. Business draws on a wide range of different business .</p>
+                                    <h1 class="page-title">Pertumbuhan Ekonomi Berkelanjutan</h1>
+                                    <p>
+                                        Pertumbuhan ekonomi berkelanjutan adalah salah satu indikator.<br>
+                                        Indikator ini terbagi ke dalam 4 komponen utama.
+                                    </p>
                                 </div>
                                 <ul class="breadcrumb-nav">
                                     <li>
