--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
                                                     <!-- <a href="javacript:" data-toggle="modal" data-target="#login"
                                                     class="login"><i class="lni lni-lock-alt"></i> Login</a> -->
                                                     <button onclick="Scroll()" data-toggle="modal" class="btn">
-                                                        Explore</button>
+                                                        <i class="lni lni-arrow-down"></i> Explore</button>
                                                 </div>
                                             </div>
                                         </div>
