--- a/public/assets/css/main2.css
+++ b/public/assets/css/main2.css
@@ -8096,3 +8096,36 @@ blockquote .shape {
   margin-top: 15px;
   width: 100%;
 }
+
+/* addtional css */
+#loi-btn {
+  border: none;
+  padding: 11px;
+  background-color: #2042e3;
+  color: #fff;
+}
+
+#loi-btn:hover {
+  color: #fff;
+  background-color: #070707;
+  border-color: transparent;
+  -webkit-transform: none;
+  transform: none;
+  
+}
+
+.form-control {
+  font-size: 14px !important;
+  border: 1px solid #eee;
+    border-radius: 4px;
+    height: 50px;
+    width: 100%;
+}
+
+.checknew, #checknew2{
+  width: 14px !important;
+  height: 20px!important;
+  /* display: block; */
+  margin: 0px 5px 5px 0px;
+  vertical-align: middle;
+}
