--- a/views/loi.ejs
+++ b/views/loi.ejs
@@ -78,15 +78,16 @@
                                                 <div class="form-group">
                                                     <label>Jenis Afiliasi</label>
                                                     <select class="form-control">
-                                                        <option value="1">Non-Government Organization</option>
-                                                        <option value="2">Private Sector</option>
+                                                        <option value="1">Government</option>
+                                                        <option value="2">Non-Government Organization</option>
+                                                        <option value="3">Private Sector</option>
                                                     </select>
                                                 </div>
                                                 <!-- <div class="form-group"> <label class="control-label">Jenis
                                                 Afiliasi</label> <input type="text" class="form-control" placeholder="Website
                                                 address"> </div> -->
                                             </div>
-                                            <div class="col-lg-6 col-12">
+                                            <div class="col-lg-6 col-12" >
                                                 <div class="form-group">
                                                     <label class="control-label">Negara</label>
                                                     <select class="form-control selectpicker countrypicker"></select>
@@ -112,6 +113,16 @@
                                                     <input class="checknew" type="checkbox" name="vehicle5" value="Boat">
                                                     <label style="display: inline;font-size: 14px;" for="vehicle5">
                                                         Ketahanan Sosial, Ekonomi Dan Lingkungan</label><br>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6 col-12">
+                                                <div class="form-group">
+                                                    <label class="control-label">Tertarik Menjadi</label>
+                                                    <select class="form-control">
+                                                        <option value="1">Funding</option>
+                                                        <option value="2">Investor</option>
+                                                        <option value="3">Mitra Kerja</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
