--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,24 +20,22 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item">
-                                        <a class="active" href="index.html">Home</a>
+                                        <a class="active" href="/">Home</a>
                                     </li>
-                                    <li class="nav-item"><a href="#">Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="about-us">About Us</a></li>
-                                        </ul>
+                                    <li class="nav-item"><a href="list">Project</a>
                                     </li>
-                                    <li class="nav-item"><a href="#">Candidates</a></li>
-                                    <li class="nav-item"><a href="#">Employers </a></li>
-                                    <li class="nav-item"><a href="#">Blog</a></li>
-                                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                                    <li class="nav-item"><a href="applyers">Applyer</a></li>
+                                    <li class="nav-item"><a href="#">Dashboard </a></li>
+                                    <li class="nav-item"><a href="#">Peta</a></li>
+                                    <li class="nav-item"><a href="contact.html">Tentang Kami</a></li>
                                 </ul>
                             </div>
                             <!-- navbar collapse -->
                             <div class="button">
                                 <a href="javacript:" data-toggle="modal" data-target="#login" class="login"><i
-                                        class="lni lni-lock-alt"></i> Login</a>
-                                <a href="javacript:" data-toggle="modal" data-target="#signup" class="btn">Sign Up</a>
+                                        class="lni lni-phone"></i> Kontak</a>
+                                <a href="loi" class="btn"><i
+                                    class="lni lni-envelope"></i> Apply LoI</a>
                             </div>
                         </nav>
                         <!-- navbar -->
